--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </ul>
         </nav>
         <div class="nav-lang">
-          <a href="" class="nav-lang-link active-lang">UA</a>
+          <a href="" class="nav-lang-link active-lang">EN</a>
           <a href="" class="nav-lang-link">PL</a>
         </div>
       </div>
@@ -347,11 +347,11 @@
               <span class="footer-logo-text">UKOSpedition</span>
             </a>
             <p class="footer-company-descript">
-              We work with a passion of taking <br />
+              <!-- We work with a passion of taking <br />
               challenges and creating new ones in <br />
-              advertising sector.
+              advertising sector. -->
             </p>
-            <button class="footer-compant-btn btn">Read more</button>
+            <a href="about.html" class="footer-compant-btn btn">Read more</a>
           </div>
           <div class="footer-services">
             <h5 class="footer-section-title">Services</h5>
@@ -363,13 +363,7 @@
                 <a href="" class="footer-list-link">Our Team </a>
               </li>
               <li class="footer-list-item">
-                <a href="" class="footer-list-link">Testimonials </a>
-              </li>
-              <li class="footer-list-item">
                 <a href="" class="footer-list-link">Contact Us </a>
-              </li>
-              <li class="footer-list-item">
-                <a href="" class="footer-list-link">FAQ’s</a>
               </li>
             </ul>
           </div>
@@ -382,14 +376,9 @@
               <li class="footer-list-item">
                 <a href="" class="footer-list-link"> Contact </a>
               </li>
-              <li class="footer-list-item">
-                <a href="" class="footer-list-link">FAQ’s </a>
-              </li>
+
               <li class="footer-list-item">
                 <a href="" class="footer-list-link">Services </a>
-              </li>
-              <li class="footer-list-item">
-                <a href="" class="footer-list-link">Latest Posts</a>
               </li>
             </ul>
           </div>
@@ -412,7 +401,7 @@
       </div>
       <div class="footer-policy">
         <div class="footer-policy-wrapper">
-          <p class="footer-policy-text">© Copyright 2024 by kodesolution.com</p>
+          <p class="footer-policy-text"></p>
           <ul class="footer-media-list">
             <li class="footer-media-list-item">
               <a href="" class="footer-media-link">
