fix:change mail addres

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <div class="card-footer-content">
               <p class="card-footer-category">Contact</p>
               <p class="card-footer-text">
-                needhelp@company.com <br />
+                ukospedition@ukospedition.com <br />
                 +48 57 583 18 10
               </p>
             </div>
