--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
         </div>
       </section>
       <section class="choose-us">
-        <h2 class="title choose-us-title">Who Choose Us?</h2>
+        <h2 class="title choose-us-title">Why Choose Us?</h2>
         <div class="choose-card-container wrapper">
           <div class="choose-us-card">
             <img
