--- a/index.html
+++ b/index.html
@@ -252,8 +252,10 @@
           />
           <div class="opportunity-contact-info">
             <span class="opportunity-contact-text">Get professional help</span>
-            <span class="opportunity-contact-number semi-title"
-              >+48 57 583 18 10</span
+            <a
+              href="tel:+48575831810"
+              class="opportunity-contact-number semi-title"
+              >+48 57 583 18 10</a
             >
           </div>
         </div>
