--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
               <a class="nav-link" href="#">About us</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-list-item">
               <a class="nav-link" href="#">Careers</a>
