--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <a class="nav-link" href="about.html">About us</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-list-item">
               <a class="nav-link" href="#">Careers</a>
