--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="#">About us</a>
+              <a class="nav-link" href="about.html">About us</a>
             </li>
             <li class="nav-list-item">
               <a class="nav-link" href="#">Services</a>
