fix: add autoplay on swiper

--- a/index.html
+++ b/index.html
@@ -597,6 +597,9 @@
         slidesPerView: 1,
         spaceBetween: 30,
         loop: true,
+        autoplay: {
+          delay: 3000,
+        },
         breakpoints: {
           420: {
             slidesPerView: 2,
