--- a/services.html
+++ b/services.html
@@ -496,6 +496,9 @@
         slidesPerView: 1,
         spaceBetween: 30,
         loop: true,
+        autoplay: {
+          delay: 3000,
+        },
         breakpoints: {
           420: {
             slidesPerView: 2,
