fix: small fix layout

--- a/services.html
+++ b/services.html
@@ -75,6 +75,12 @@
             refrigerated options, to guarantee the secure and timely delivery of
             your cargo.
           </p>
+          <p class="our-services-text semi-title">
+            At UKOSpedition, we provide reliable, efficient, and customized
+            logistics solutions to meet the unique needs of our clients. Whether
+            it's freight transport, warehousing, or supply chain management, we
+            ensure smooth and timely deliveries every step of the way.
+          </p>
         </div>
         <div class="our-services-card-container">
           <div class="wrapper our-services-card-info">
