fix:fix text label

--- a/services.html
+++ b/services.html
@@ -67,9 +67,7 @@
       </section>
       <section class="our-services">
         <div class="wrapper our-services-wrapper">
-          <span class="our-services-label label"
-            >specialise in the transportation
-          </span>
+          <span class="our-services-label label">transportation company </span>
           <h2 class="our-services-title title">
             Delivering success, one kilometer at a time
           </h2>
