--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
                 />
                 <div class="contact-us-card-content">
                   <span class="contact-us-card-title">Email</span>
-                  <span class="contact-us-card-text">dodomy@hochy.com</span>
+                  <span class="contact-us-card-text">email@mail.com</span>
                 </div>
               </div>
               <div class="contact-us-card">
@@ -104,7 +104,7 @@
                 <div class="contact-us-card-content">
                   <span class="contact-us-card-title">Location</span>
                   <span class="contact-us-card-text"
-                    >Moja doma des' tam, 9</span
+                    >Powstańców 97, 05-870</span
                   >
                 </div>
               </div>
