--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
               <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="#">Careers</a>
+              <a class="nav-link" href="career.html">Careers</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="#">Contact us</a>
+              <a class="nav-link" href="contact.html">Contact us</a>
             </li>
           </ul>
         </nav>
