--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
     <header>
       <span class="logo">
         <img class="logo-img" src="./src/img/Logo.png" alt="" />
-        <a href="#" class="logo-text">Ukospedition</a>
+        <a href="index.html" class="logo-text">Ukospedition</a>
       </span>
       <div class="menu__mobile">
         <div class="menu__mobile_button">
@@ -48,10 +48,10 @@
               <a class="nav-link" href="#">Services</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="#">Careers</a>
+              <a class="nav-link" href="career.html">Careers</a>
             </li>
             <li class="nav-list-item">
-              <a class="nav-link" href="#">Contact us</a>
+              <a class="nav-link" href="contact.html">Contact us</a>
             </li>
           </ul>
         </nav>
