--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <header>
       <span class="logo">
         <img class="logo-img" src="./src/img/Logo.png" alt="" />
-        <a href="#" class="logo-text">Ukospedition</a>
+        <a href="index.html" class="logo-text">Ukospedition</a>
       </span>
       <div class="menu__mobile">
         <div class="menu__mobile_button">
@@ -81,7 +81,7 @@
                 />
                 <div class="contact-us-card-content">
                   <span class="contact-us-card-title">Phone</span>
-                  <span class="contact-us-card-text">+123456789</span>
+                  <span class="contact-us-card-text">+48 57 583 18 10</span>
                 </div>
               </div>
               <div class="contact-us-card">
@@ -92,7 +92,9 @@
                 />
                 <div class="contact-us-card-content">
                   <span class="contact-us-card-title">Email</span>
-                  <span class="contact-us-card-text">email@mail.com</span>
+                  <span class="contact-us-card-text"
+                    >ukospedition@ukospedition.com</span
+                  >
                 </div>
               </div>
               <div class="contact-us-card">
