fix:fix carrer page

--- a/career.html
+++ b/career.html
@@ -134,30 +134,35 @@
       </section>
       <section class="feedback">
         <div class="opportunity-contact">
-          <p class="opportunity-contact-descript semi-title">
-            Trusted transportation company
-          </p>
+          <div class="opportunity-contact-info work">
+            <span class="opportunity-contact-number semi-title"
+              >Interested in joining our team?</span
+            >
+            <span class="opportunity-contact-text"
+              >Submit your application</span
+            >
+          </div>
           <img
-            src="./src/img/manager-icon.png"
+            src="./src/img/work-cv.png"
             alt=""
             class="opportunity-contact-img"
           />
           <div class="opportunity-contact-info">
-            <span class="opportunity-contact-text">Get professional help</span>
-            <a
-              href="tel:+48575831810"
-              class="opportunity-contact-number semi-title"
-              >+48 57 583 18 10</a
+            <span class="opportunity-contact-number semi-title"
+              >Email us at</span
+            >
+            <span class="opportunity-contact-text"
+              >ukospedition@ukospedition.com</span
             >
           </div>
         </div>
         <div class="feedback-content">
-          <span class="feedback-label label">Get in touch with us anytime</span>
+          <!-- <span class="feedback-label label">Get in touch with us anytime</span>
           <h2 class="title feedback-title">
             Looking for fast and <br />
             efficient transport solutions?
           </h2>
-          <button class="btn feedback-btn" id="openModal">Get a quote</button>
+          <button class="btn feedback-btn" id="openModal">Get a quote</button> -->
         </div>
       </section>
     </main>
