feat:add responsive for career page

--- a/career.html
+++ b/career.html
@@ -385,5 +385,18 @@
         </div>
       </div>
     </footer>
+    <script>
+      const button = document.querySelector('.menu__mobile_button');
+      const header = document.querySelector('.header-nav-content');
+      button.addEventListener('click', () => {
+        button.classList.toggle('active');
+      });
+      button.addEventListener('click', () => {
+        header.classList.toggle('show');
+      });
+      button.addEventListener('click', () => {
+        document.body.classList.toggle('no-scroll');
+      });
+    </script>
   </body>
 </html>
